# dexter-engenharia

./: .gitignore  README.md  README_LOCAL_LLM.md  dexter.db  pyproject.toml
.claude/: settings.local.json
src/dexter_eng/: __init__.py
src/dexter_eng.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/dexter_eng/adapters/llm/: client.py  local_ollama_client.py  openai_client.py
src/dexter_eng/adapters/pdf/: extract_text.py
src/dexter_eng/cli/: main.py
src/dexter_eng/config/: settings.py
src/dexter_eng/core/prompts/: edital_extract.md
src/dexter_eng/core/rules/: edital_rules.py
src/dexter_eng/core/schemas/: edital.py
src/dexter_eng/persistence/: db.py
src/dexter_eng/pipeline/: edital_pipeline.py
src/dexter_eng/pipeline/steps/: step_chunk.py  step_llm_structured.py
src/dexter_eng/renderers/: markdown.py
src/tests/: conftest.py  test_chunk.py  test_db.py  test_db_migrations.py  test_edital_schema.py  test_llm_cache.py  test_llm_structured.py  test_markdown_renderer.py  test_pipeline_integration.py  test_rules.py  test_run_metrics.py  test_settings.py
